Some work on movie making notebook.
Rest is just CRLF-> LF conversion.

--- a/ipython/system/NetworkCamera client.ipynb
+++ b/ipython/system/NetworkCamera client.ipynb
@@ -6,7 +6,16 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\user\\documents\\code\\cameranetwork_git\\CameraNetwork\\transformation_matrices.py:1899: UserWarning: failed to import module _transformations\n",
+      "  warnings.warn(\"failed to import module %s\" % name)\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import division\n",
     "%matplotlib inline\n",
@@ -26,18 +35,10 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adding the new server\n",
-      "['102']\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\amitibo\\AppData\\Local\\Continuum\\Anaconda2\\lib\\site-packages\\bs4\\__init__.py:166: UserWarning: No parser was explicitly specified, so I'm using the best available HTML parser for this system (\"lxml\"). This usually isn't a problem, but if you run this code on another system, or in a different virtual environment, it may use a different parser and behave differently.\n",
+      "C:\\Users\\User\\Anaconda2\\lib\\site-packages\\bs4\\__init__.py:166: UserWarning: No parser was explicitly specified, so I'm using the best available HTML parser for this system (\"lxml\"). This usually isn't a problem, but if you run this code on another system, or in a different virtual environment, it may use a different parser and behave differently.\n",
       "\n",
       "To get rid of this warning, change this:\n",
       "\n",
@@ -48,6 +49,13 @@
       " BeautifulSoup([your markup], \"lxml\")\n",
       "\n",
       "  markup_type=markup_type))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['108', '106', '107']\n"
      ]
     }
    ],
@@ -60,6 +68,29 @@
     "#if 'pi' in SERVERS:\n",
     "#    SERVERS.remove('pi')\n",
     "print SERVERS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "459"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = c.query('108', '02/05/2017')\n",
+    "len(df.loc[(slice(None), '2'), :].index)"
    ]
   },
   {
