--- a/ipython/system/NetworkCamera make movie.ipynb
+++ b/ipython/system/NetworkCamera make movie.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -16,12 +16,15 @@
     "import CameraNetwork\n",
     "import CameraNetwork.global_settings as gs\n",
     "import cv2\n",
-    "import time"
+    "import Image\n",
+    "import ImageDraw\n",
+    "import time\n",
+    "from tqdm import tqdm_notebook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['108', '106']\n"
+      "['108', '106', '107']\n"
      ]
     }
    ],
@@ -62,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -82,63 +85,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "video = cv2.VideoWriter('video.avi', -1, 1, (301, 301))\n",
+    "video = cv2.VideoWriter('video_2017_02_04.avi', -1, 6, (301, 301))\n",
     "\n",
-    "for i, ind in enumerate(df.loc[(slice(None), '2'), :].index[:100]):\n",
-    "    print i\n",
+    "for ind in tqdm_notebook(df.loc[(slice(None), '2'), :].index):\n",
     "    img, _ = c.seek('108', ind[0], ind[1], True, 301)\n",
-    "    video.write(cv2.cvtColor(img, cv2.COLOR_RGB2BGR))\n",
+    "    img = Image.fromarray(img)\n",
+    "    draw = ImageDraw.Draw(img)\n",
+    "    draw.text(\n",
+    "        (0, 0),\n",
+    "        ind[0].time().strftime(\"%H:%M:%S\"),\n",
+    "        (255,255,255)\n",
+    "    )\n",
+    "\n",
+    "    video.write(cv2.cvtColor(np.array(img), cv2.COLOR_RGB2BGR))\n",
     "                             \n",
     "video.release()"
    ]
