--- a/ipython/reconstruction/download_radiosondes.ipynb
+++ b/ipython/reconstruction/download_radiosondes.ipynb
@@ -2,36 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import os\n",
     "import pandas as pd\n",
     "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "BASE_ADDRESS = r'http://weather.uwyo.edu/cgi-bin/sounding?region=mideast&TYPE=TEXT%3ALIST&YEAR=2016&MONTH=10&FROM={}11&TO={}12&STNM=40179'\n",
+    "YEAR = 2017\n",
+    "MONTH = 1\n",
+    "start_day = 1\n",
+    "end_day = 31\n",
+    "\n",
+    "BASE_PATH = \"./data/radiosondes/{year}_{month}\".format(year=YEAR, month=MONTH)\n",
+    "if not os.path.isdir(BASE_PATH):\n",
+    "    os.makedirs(BASE_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "BASE_ADDRESS = r'http://weather.uwyo.edu/cgi-bin/sounding?region=mideast&TYPE=TEXT%3ALIST&YEAR={year}&MONTH={month}&FROM={day}11&TO={day}12&STNM=40179'\n",
     "COLUMNS = ('PRES', 'HGHT', 'TEMP', 'DWPT', 'RELH', 'MIXR', 'DRCT', 'SKNT', 'THTA', 'THTE', 'THTV')\n",
-    "for d in range(13, 32):\n",
+    "for d in range(start_day, end_day+1):\n",
     "    data = []\n",
-    "    r = requests.get(BASE_ADDRESS.format(d, d))\n",
+    "    r = requests.get(BASE_ADDRESS.format(year=YEAR, month=MONTH, day=d))\n",
     "    for line in r.text.split('\\n')[10:]:\n",
     "        if line.startswith(u'</PRE>'):\n",
     "            break\n",
     "        data.append([float(s) for s in line.split()])\n",
     "    df = pd.DataFrame(data, columns=COLUMNS)\n",
-    "    df.to_csv('../data/radiosondes/2016_oct/{:02}.csv'.format(d))"
+    "    df.to_csv(os.path.join(BASE_PATH, '{day:02}.csv'.format(day=d)))"
    ]
   },
   {
@@ -47,7 +66,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -61,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
