--- a/ipython/system/NetworkCamera make movie.ipynb
+++ b/ipython/system/NetworkCamera make movie.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\user\\documents\\code\\cameranetwork_git\\CameraNetwork\\transformation_matrices.py:1899: UserWarning: failed to import module _transformations\n",
+      "  warnings.warn(\"failed to import module %s\" % name)\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import division\n",
     "%matplotlib inline\n",
@@ -30,27 +39,10 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\User\\Anaconda2\\lib\\site-packages\\bs4\\__init__.py:166: UserWarning: No parser was explicitly specified, so I'm using the best available HTML parser for this system (\"lxml\"). This usually isn't a problem, but if you run this code on another system, or in a different virtual environment, it may use a different parser and behave differently.\n",
-      "\n",
-      "To get rid of this warning, change this:\n",
-      "\n",
-      " BeautifulSoup([your markup])\n",
-      "\n",
-      "to this:\n",
-      "\n",
-      " BeautifulSoup([your markup], \"lxml\")\n",
-      "\n",
-      "  markup_type=markup_type))\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['108', '106', '107']\n"
+      "['109', '110', '111', '112', '113', '114', '115', '116', '117', '118']\n"
      ]
     }
    ],
@@ -65,18 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df = c.query('108', '02/04/2017')"
+    "df = c.query('117', '03/13/2017')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -90,10 +82,10 @@
     }
    ],
    "source": [
-    "video = cv2.VideoWriter('video_2017_02_04.avi', -1, 6, (301, 301))\n",
+    "video = cv2.VideoWriter('video_117_2017_03_13.avi', -1, 6, (301, 301))\n",
     "\n",
     "for ind in tqdm_notebook(df.loc[(slice(None), '2'), :].index):\n",
-    "    img, _ = c.seek('108', ind[0], ind[1], True, 301)\n",
+    "    img, _ = c.seek('117', ind[0], ind[1], True, 301)\n",
     "    img = Image.fromarray(img)\n",
     "    draw = ImageDraw.Draw(img)\n",
     "    draw.text(\n",
@@ -105,6 +97,28 @@
     "    video.write(cv2.cvtColor(np.array(img), cv2.COLOR_RGB2BGR))\n",
     "                             \n",
     "video.release()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 1)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
    ]
   },
   {
