--- a/ipython/system/NetworkCamera make movie.ipynb
+++ b/ipython/system/NetworkCamera make movie.ipynb
@@ -11,7 +11,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "i:\\amit\\office backup\\amit\\studies\\cameranetwork_git\\CameraNetwork\\transformation_matrices.py:1899: UserWarning: failed to import module _transformations\n",
+      "c:\\users\\user\\documents\\code\\cameranetwork_git\\CameraNetwork\\transformation_matrices.py:1899: UserWarning: failed to import module _transformations\n",
       "  warnings.warn(\"failed to import module %s\" % name)\n"
      ]
     }
@@ -39,34 +39,10 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Failed retrieving proxy parameters:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"i:\\amit\\office backup\\amit\\studies\\cameranetwork_git\\CameraNetwork\\internet.py\", line 56, in retrieve_proxy_parameters\n",
-      "    response = urllib2.urlopen(req)\n",
-      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 154, in urlopen\n",
-      "    return opener.open(url, data, timeout)\n",
-      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 435, in open\n",
-      "    response = meth(req, response)\n",
-      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 548, in http_response\n",
-      "    'http', request, response, code, msg, hdrs)\n",
-      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 473, in error\n",
-      "    return self._call_chain(*args)\n",
-      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 407, in _call_chain\n",
-      "    result = func(*args)\n",
-      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 556, in http_error_default\n",
-      "    raise HTTPError(req.get_full_url(), code, msg, hdrs, fp)\n",
-      "HTTPError: HTTP Error 404: Not Found\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['109', '110', '111', '113', '114', '115', '116', '117', '118']\n"
+      "['109', '110', '111', '112', '113', '114', '115', '116', '117', '118']\n"
      ]
     }
    ],
@@ -87,14 +63,14 @@
    },
    "outputs": [],
    "source": [
-    "CAM = 111\n",
+    "CAM = 113\n",
     "DAY = 16\n",
     "MONTH = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Camera 111 captured 481 images on this day.\n"
+      "Camera 113 captured 662 images on this day.\n"
      ]
     }
    ],
@@ -114,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -125,32 +101,17 @@
      "text": [
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-7:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Anaconda2\\lib\\threading.py\", line 801, in __bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"C:\\Anaconda2\\lib\\site-packages\\tqdm\\_tqdm.py\", line 102, in run\n",
-      "    for instance in self.tqdm_cls._instances:\n",
-      "  File \"C:\\Anaconda2\\lib\\_weakrefset.py\", line 60, in __iter__\n",
-      "    for itemref in self.data:\n",
-      "RuntimeError: Set changed size during iteration\n",
-      "\n"
-     ]
     }
    ],
    "source": [
+    "JPEG_QUALITY = 95\n",
     "video = cv2.VideoWriter(\n",
     "    'video_{}_2017_{:02}_{:02}.avi'.format(CAM, MONTH, DAY),\n",
     "    -1, 6, (301, 301)\n",
     ")\n",
     "\n",
     "for ind in tqdm_notebook(df.loc[(slice(None), '2'), :].index):\n",
-    "    img, _ = c.seek('{}'.format(CAM), ind[0], ind[1], True, 301)\n",
+    "    img, _ = c.seek('{}'.format(CAM), ind[0], ind[1], JPEG_QUALITY, 301)\n",
     "    img = Image.fromarray(img)\n",
     "    draw = ImageDraw.Draw(img)\n",
     "    draw.text(\n",
@@ -162,28 +123,6 @@
     "    video.write(cv2.cvtColor(np.array(img), cv2.COLOR_RGB2BGR))\n",
     "                             \n",
     "video.release()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5, 1)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
    ]
   },
   {
@@ -209,7 +148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -223,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11"
   },
   "widgets": {
    "state": {
