Added serial number display to array view.

--- a/ipython/system/NetworkCamera make movie.ipynb
+++ b/ipython/system/NetworkCamera make movie.ipynb
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['109', '110', '111', '112', '113', '114', '115', '116', '117', '118']\n"
+      "['109', '110', '112', '113', '114', '115', '116', '117', '118']\n"
      ]
     }
    ],
@@ -57,20 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "CAM = 109\n",
-    "DAY = 13\n",
-    "MONTH = 2"
+    "CAM = 112\n",
+    "DAY = 20\n",
+    "MONTH = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -79,30 +79,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Camera 109 captured 2771 images on this day.\n"
+      "Camera 112 captured 2167 images on this day.\n"
      ]
     }
    ],
    "source": [
-    "df = c.query('{}'.format(CAM), '{:02}/{}/2017'.format(MONTH, DAY))\n",
+    "df = c.query('{}'.format(CAM), '{:02}/{}/2017'.format(MONTH, DAY))[0]\n",
     "print(\"Camera {} captured {} images on this day.\".format(CAM, df.shape[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "JPEG_QUALITY = 95\n",
     "video = cv2.VideoWriter(\n",
@@ -111,7 +103,7 @@
     ")\n",
     "\n",
     "for ind in tqdm_notebook(df.loc[(slice(None), '2'), :].index):\n",
-    "    img, _ = c.seek('{}'.format(CAM), ind[0], ind[1], JPEG_QUALITY, 301)\n",
+    "    img = c.seek('{}'.format(CAM), ind[0], ind[1], JPEG_QUALITY, 301)[0][0]\n",
     "    img = Image.fromarray(img)\n",
     "    draw = ImageDraw.Draw(img)\n",
     "    draw.text(\n",
@@ -127,13 +119,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "video.release()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[[0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         ..., \n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         ..., \n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         ..., \n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0]],\n",
+       " \n",
+       "        ..., \n",
+       "        [[0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         ..., \n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         ..., \n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         ..., \n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0]]], dtype=uint8)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.seek('{}'.format(CAM), ind[0], ind[1], JPEG_QUALITY, 301)[0]"
    ]
   },
   {
