Added handling of days. Not tested!!!

--- a/ipython/system/NetworkCamera make movie.ipynb
+++ b/ipython/system/NetworkCamera make movie.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -28,21 +30,24 @@
     "import Image\n",
     "import ImageDraw\n",
     "import time\n",
-    "from tqdm import tqdm_notebook"
+    "from tqdm import tqdm_notebook\n",
+    "import traceback"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['109', '110', '112', '113', '114', '115', '116', '117', '118']\n"
+      "['109', '110', '111', '112', '113', '114', '115', '116', '117', '118', '119']\n"
      ]
     }
    ],
@@ -59,27 +64,31 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "CAM = 112\n",
-    "DAY = 20\n",
-    "MONTH = 1"
+    "CAM = 113\n",
+    "DAY = 5\n",
+    "MONTH = 4"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Camera 112 captured 2167 images on this day.\n"
+      "Camera 113 captured 668 images on this day.\n"
      ]
     }
    ],
@@ -90,38 +99,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "JPEG_QUALITY = 95\n",
+    "JPEG_QUALITY = 100\n",
     "video = cv2.VideoWriter(\n",
     "    'video_{}_2017_{:02}_{:02}.avi'.format(CAM, MONTH, DAY),\n",
     "    -1, 6, (301, 301)\n",
     ")\n",
     "\n",
     "for ind in tqdm_notebook(df.loc[(slice(None), '2'), :].index):\n",
-    "    img = c.seek('{}'.format(CAM), ind[0], ind[1], JPEG_QUALITY, 301)[0][0]\n",
-    "    img = Image.fromarray(img)\n",
-    "    draw = ImageDraw.Draw(img)\n",
-    "    draw.text(\n",
-    "        (0, 0),\n",
-    "        ind[0].time().strftime(\"%H:%M:%S\"),\n",
-    "        (255,255,255)\n",
-    "    )\n",
+    "    try:\n",
+    "        img = c.seek('{}'.format(CAM), ind[0], ind[1], JPEG_QUALITY, 301)[0][0]\n",
+    "        img = Image.fromarray(img)\n",
+    "        draw = ImageDraw.Draw(img)\n",
+    "        draw.text(\n",
+    "            (0, 0),\n",
+    "            ind[0].time().strftime(\"%H:%M:%S\"),\n",
+    "            (255,255,255)\n",
+    "        )\n",
     "\n",
-    "    video.write(cv2.cvtColor(np.array(img), cv2.COLOR_RGB2BGR))\n",
-    "                             \n",
+    "        video.write(cv2.cvtColor(np.array(img), cv2.COLOR_RGB2BGR))\n",
+    "    except Exception, e:\n",
+    "        traceback.print_exc()\n",
+    "        \n",
     "video.release()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -132,7 +156,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -201,7 +227,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
