Added flag of local proxy.

--- a/ipython/radiometric/sunphotometer phase functions.ipynb
+++ b/ipython/radiometric/sunphotometer phase functions.ipynb
@@ -1275,8 +1275,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -1290,33 +1291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
-  },
-  "widgets": {
-   "state": {
-    "a4c9c51c2e9940d4ac6ef6b5f23a8e4a": {
-     "views": [
-      {
-       "cell_index": 24
-      }
-     ]
-    },
-    "e38aa15408d64ce0928c122e3a269876": {
-     "views": [
-      {
-       "cell_index": 36
-      }
-     ]
-    },
-    "e9354659ddad40e6921be3e081a4c5d3": {
-     "views": [
-      {
-       "cell_index": 30
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
