--- a/ipython/system/NetworkCamera make movie.ipynb
+++ b/ipython/system/NetworkCamera make movie.ipynb
@@ -237,7 +237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -251,19 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
-  },
-  "widgets": {
-   "state": {
-    "44f50f08f72243e1baa359076f3052b9": {
-     "views": [
-      {
-       "cell_index": 4
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
