--- a/ipython/system/Download Thumbnails.ipynb
+++ b/ipython/system/Download Thumbnails.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -20,6 +22,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import time\n",
+    "import tqdm\n",
     "from tqdm import tqdm_notebook\n",
     "import traceback\n",
     "plt.rcParams['figure.figsize'] = (8.0, 8.0)"
@@ -27,295 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Failed retrieving proxy parameters:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"i:\\amit\\office backup\\amit\\studies\\cameranetwork_git\\CameraNetwork\\internet.py\", line 56, in retrieve_proxy_parameters\n",
-      "    response = urllib2.urlopen(req)\n",
-      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 154, in urlopen\n",
-      "    return opener.open(url, data, timeout)\n",
-      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 435, in open\n",
-      "    response = meth(req, response)\n",
-      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 548, in http_response\n",
-      "    'http', request, response, code, msg, hdrs)\n",
-      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 473, in error\n",
-      "    return self._call_chain(*args)\n",
-      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 407, in _call_chain\n",
-      "    result = func(*args)\n",
-      "  File \"C:\\Anaconda2\\lib\\urllib2.py\", line 556, in http_error_default\n",
-      "    raise HTTPError(req.get_full_url(), code, msg, hdrs, fp)\n",
-      "HTTPError: HTTP Error 404: Not Found\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['109', '110', '111', '113', '115', '116', '117', '118']\n"
-     ]
-    }
-   ],
-   "source": [
-    "c = CameraNetwork.CLIclient()\n",
-    "proxy_params = CameraNetwork.retrieve_proxy_parameters()\n",
-    "c.start(proxy_params)\n",
-    "time.sleep(3)\n",
-    "SERVERS = c.client_instance.servers\n",
-    "print SERVERS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "days_list = c.days(SERVERS)[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r"
-     ]
-    }
-   ],
-   "source": [
-    "for server in tqdm_notebook(SERVERS, leave=False):\n",
-    "    days_list = c.days(server)[1][0][\"days_list\"]\n",
-    "    tmp_dfs = []\n",
-    "    for day in tqdm_notebook(days_list, leave=False):\n",
-    "        tmp_dfs.append(c.query(server_id=server, query_day=datetime.datetime.strptime(day, \"%Y_%m_%d\").date())[0])\n",
-    "    dfs.append(pd.concat(tmp_dfs, axis=0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'days_list': ['2017_04_04',\n",
-       "  '2017_04_05',\n",
-       "  '2017_04_06',\n",
-       "  '2017_04_07',\n",
-       "  '2017_04_08',\n",
-       "  '2017_04_09',\n",
-       "  '2017_04_10',\n",
-       "  '2017_04_11',\n",
-       "  '2017_04_12']}"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.days(server)[1][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(dfs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(dfs[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(11360, 5)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>path</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>altitude</th>\n",
-       "      <th>serial_num</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Time</th>\n",
-       "      <th>hdr</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">2017-01-25 12:27:00</th>\n",
-       "      <th>0</th>\n",
-       "      <td>/home/odroid/captured_images/2017_01_25/148534...</td>\n",
-       "      <td>35.024963</td>\n",
-       "      <td>32.775776</td>\n",
-       "      <td>229.0</td>\n",
-       "      <td>4102820380</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>/home/odroid/captured_images/2017_01_25/148534...</td>\n",
-       "      <td>35.024963</td>\n",
-       "      <td>32.775776</td>\n",
-       "      <td>229.0</td>\n",
-       "      <td>4102820380</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>/home/odroid/captured_images/2017_01_25/148534...</td>\n",
-       "      <td>35.024963</td>\n",
-       "      <td>32.775776</td>\n",
-       "      <td>229.0</td>\n",
-       "      <td>4102820380</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>/home/odroid/captured_images/2017_01_25/148534...</td>\n",
-       "      <td>35.024963</td>\n",
-       "      <td>32.775776</td>\n",
-       "      <td>229.0</td>\n",
-       "      <td>4102820380</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-01-25 12:28:00</th>\n",
-       "      <th>0</th>\n",
-       "      <td>/home/odroid/captured_images/2017_01_25/148534...</td>\n",
-       "      <td>35.024963</td>\n",
-       "      <td>32.775776</td>\n",
-       "      <td>229.0</td>\n",
-       "      <td>4102820380</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                      path  \\\n",
-       "Time                hdr                                                      \n",
-       "2017-01-25 12:27:00 0    /home/odroid/captured_images/2017_01_25/148534...   \n",
-       "                    1    /home/odroid/captured_images/2017_01_25/148534...   \n",
-       "                    2    /home/odroid/captured_images/2017_01_25/148534...   \n",
-       "                    3    /home/odroid/captured_images/2017_01_25/148534...   \n",
-       "2017-01-25 12:28:00 0    /home/odroid/captured_images/2017_01_25/148534...   \n",
-       "\n",
-       "                         longitude   latitude  altitude  serial_num  \n",
-       "Time                hdr                                              \n",
-       "2017-01-25 12:27:00 0    35.024963  32.775776     229.0  4102820380  \n",
-       "                    1    35.024963  32.775776     229.0  4102820380  \n",
-       "                    2    35.024963  32.775776     229.0  4102820380  \n",
-       "                    3    35.024963  32.775776     229.0  4102820380  \n",
-       "2017-01-25 12:28:00 0    35.024963  32.775776     229.0  4102820380  "
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -327,7 +46,83 @@
     }
    ],
    "source": [
-    "print c.servers_list"
+    "c = CameraNetwork.CLIclient()\n",
+    "proxy_params = CameraNetwork.retrieve_proxy_parameters()\n",
+    "c.start(proxy_params)\n",
+    "time.sleep(3)\n",
+    "print c.client_instance.servers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(SERVERS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4/|/2017_02_26:  10%|| 4/40 [00:29<04:21,  7.25s/it]                                                                                "
+     ]
+    },
+    {
+     "ename": "TimeoutError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTimeoutError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-3d111bc7f033>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[0mtnb2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_description\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mday\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mtnb2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrefresh\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[0mtmp_dfs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mserver_id\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mserver\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mquery_day\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mday\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"%Y_%m_%d\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mdfs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtmp_dfs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\user\\documents\\code\\cameranetwork_git\\CameraNetwork\\client.pyc\u001b[0m in \u001b[0;36mquery\u001b[1;34m(self, server_id, query_day, force)\u001b[0m\n\u001b[0;32m    447\u001b[0m             kwds=dict(\n\u001b[0;32m    448\u001b[0m                 \u001b[0mquery_date\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mquery_day\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 449\u001b[1;33m                 \u001b[0mforce\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mforce\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    450\u001b[0m             )\n\u001b[0;32m    451\u001b[0m         )\n",
+      "\u001b[1;32mc:\\users\\user\\documents\\code\\cameranetwork_git\\CameraNetwork\\client.pyc\u001b[0m in \u001b[0;36msend_message\u001b[1;34m(self, servers_id, cmd, args, kwds, timeout)\u001b[0m\n\u001b[0;32m    335\u001b[0m         \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    336\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mfuture\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfuture_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 337\u001b[1;33m             \u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfuture\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    338\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    339\u001b[0m         \u001b[0mstatuses\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcmds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0margs_answers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwds_answers\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\User\\Anaconda2\\lib\\site-packages\\concurrent\\futures\\_base.pyc\u001b[0m in \u001b[0;36mresult\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m    403\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__get_result\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    404\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 405\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mTimeoutError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    406\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    407\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mexception_info\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTimeoutError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "dfs = {}\n",
+    "tnb1 = tqdm_notebook(c.client_instance.servers, leave=False)\n",
+    "for server in tnb1:\n",
+    "    tnb1.set_description(\"Server {}\".format(server))\n",
+    "    tnb1.refresh()\n",
+    "    days_list = c.days(server)[1][0][\"days_list\"]\n",
+    "    tmp_dfs = []\n",
+    "    tnb2 = tqdm_notebook(days_list, leave=False)\n",
+    "    for day in tnb2:\n",
+    "        try:\n",
+    "            tnb2.set_description(day)\n",
+    "            tnb2.refresh()\n",
+    "            tmp_dfs.append(c.query(server_id=server, query_day=datetime.datetime.strptime(day, \"%Y_%m_%d\").date())[0])\n",
+    "        except:\n",
+    "            tqdm.write(\"Failed loading day {} of server {}\".format(day, server))\n",
+    "    dfs[server] = pd.concat(tmp_dfs, axis=0)"
    ]
   },
   {
@@ -337,15 +132,13 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "xx"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -359,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11"
   },
   "widgets": {
    "state": {
